--- a/.github/workflows/build-dap-query-js.yml
+++ b/.github/workflows/build-dap-query-js.yml
@@ -9,7 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: npm install -g gulp
-      - run: cd
+      - run: pwd
+      # - run: cd
       - run: ls -a
       - run: npm install
       - run: gulp process-all
