--- a/.github/workflows/build-dap-query-js.yml
+++ b/.github/workflows/build-dap-query-js.yml
@@ -1,4 +1,4 @@
-name: build-dap-query-js
+# name: build-dap-query-js
 on:
   push:
   schedule:
@@ -12,12 +12,5 @@ jobs:
       - run: ls -a
       - run: pwd
       - run: cd ..
-      - run: ls -a
-      - run: pwd
-      - run: cd ..
-      - run: ls -a
-      - run: pwd
-      - run: cd ..
-      - run: ls -a
       - run: npm install
       - run: gulp process-all
